# textdistance.rs

./: .gitignore  .markdownlint.yaml  Cargo.toml  README.md  Taskfile.yaml
.github/workflows/: main.yml
benches/: str_benchmarks.rs
src/: algorithm.rs  counter.rs  fraction.rs  lib.rs  main.rs  nstr.rs  result.rs  str.rs
src/algorithms/: arith_ncd.rs  bag.rs  cosine.rs  counter.rs  damerau_levenshtein.rs  entropy_ncd.rs  hamming.rs  jaccard.rs  jaro.rs  jaro_winkler.rs  lcsseq.rs  lcsstr.rs  length.rs  levenshtein.rs  lig3.rs  mlipns.rs  overlap.rs  prefix.rs  ratcliff_obershelp.rs  roberts.rs  sift4.rs  sift4_common.rs  sift4_simple.rs  smith_waterman.rs  sorensen_dice.rs  suffix.rs  tversky.rs  yujian_bo.rs
src/textdistance/: algorithm.rs  cosine.rs  damerau_levenshtein.rs  hamming.rs  jaccard.rs  jaro.rs  jaro_winkler.rs  lcsseq.rs  lcsstr.rs  levenshtein.rs  mlipns.rs  overlap.rs  prefix.rs  ratcliff_obershelp.rs  sift4.rs  smith_waterman.rs  sorensen_dice.rs  str.rs  suffix.rs  tversky.rs  yujian_bo.rs
tests/: integration_test.rs  test_introspection.py
