[package]
name = "textdistance"
version = "1.0.2"
edition = "2021"
authors = ["Gram <git@orsinium.dev>"]
description = "Lots of algorithms to compare how similar two sequences are"
repository = "https://github.com/life4/textdistance.rs"
license = "MIT"
keywords = ["jaro", "hamming", "levenshtein", "similarity", "distance"]
categories = [
    "algorithms",
    "science",
    "text-processing",
    "command-line-interface",
]

[features]
default = ["std"]
std = []

[dev-dependencies]
assert2 = "0.3.10"
criterion = "0.4.0"
proptest = "1.1.0"
rstest = "0.17.0"
unicode-segmentation = "1.10.1"

[[bench]]
name = "str_benchmarks"
harness = false
